# toastoflondon-api

./: .gitignore  Cargo.toml  README.md  names.json  rust-toolchain  vercel.json
.github/workflows/: checks.yaml  test.yaml
api/: Cargo.toml  index.rs  names.rs
api/_lib/: random.rs
src/: main.rs
