[package]
name = "toastoflondon-api"
authors=["dcolesDEV <me@danielcoles.co.uk>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rocket = "0.4.10"
serde = "1.0.130"
serde_json = "1.0.68"