[package]
name = "toastoflondon-api"
version = "1.0.0"
authors = ["dcolesDEV <me@danielcoles.co.uk>"]
edition = "2018"

[dependencies]
http = "0.1"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
vercel_lambda = "*"

[lib]
name = "random"
path = "_lib/random.rs"

[[bin]]
name = "index"
path = "./index.rs"
